[metadata]
name = indytasks
version = 0.0.2
author = Marc Gardent
author_email = marcgardent@yahoo.fr
description = doit task for dev & CI & CD environments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marcgardent/doit-indytasks
project_urls =
    Bug Tracker = https://github.com/marcgardent/doit-indytasks/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pydoit
[options.packages.find]
where = src